# flask-example

./: example.py  pyproject.toml  repo.json
templates/: main.html
templates/users/: edit.html  index.html  login.html  new.html  show.html
